--- a/src/features/cart/components/CartItemList/CartItemList.module.css
+++ b/src/features/cart/components/CartItemList/CartItemList.module.css
@@ -1,4 +1,8 @@
-.list{
+.list {
   list-style: none;
-  padding: 5px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
